routing-simple-kubernetes/envoy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: envoy


---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-configmap
data:
  config: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              codec_type: http1
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/api"
                    route:
                      cluster: api
                  - match:
                      prefix: "/"
                    route:
                      cluster: frontend
              http_filters:
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: frontend
        connect_timeout: 1.00s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: frontend
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: frontend
                    port_value: 9090
                    ipv4_compat: true
      - name: api
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: terminal
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: api
                    port_value: 9090
                    ipv4_compat: true
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: envoy
      app: envoy
  template:
    metadata:
      labels:
        service: envoy
        app: envoy
    spec:
      volumes:
      - name: config
        configMap:
          name: envoy-configmap
          items:
          - key: config
            path: envoy.yaml
      containers:
        - name: envoy
          image: envoyproxy/envoy-alpine:v1.13.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
              readOnly: true
